tests/paczka1/fuzzy1/70201431.err
Error in line 3: ysRHC S!67 206,5
Error in line 8: ysRHC S167 20,94
Error in line 2: VaywmQann A419 89,0
Error in line 10: ysRHC S599 18,5
Error in line 9: 6NgE9 S599 84,3
Error in line 16: 6NgE9 A251 39,2
Error in line 21: A251 S167 16,9
Error in line 31: A251 A251 98,09
Error in line 26: A251 S599 51,0
Error in line 28: 6NgE9 S167 23,2
Error in line 24: T8ALjO S167 18,9
Error in line 35: 6NgE9 A419 90,1
